--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
           <a href="/swagger/">Abrir Swagger UI →</a>
         </div>
         <div class="card">
-          <h2>OpenAPI spec</h2>
+          <h2>enterprise-api-v1 spec</h2>
           <p>Descargá la especificación pública en YAML.</p>
-          <a href="/openapi.yaml">Ver openapi.yaml →</a>
+          <a href="/enterprise-api-v1.yaml">Ver enterprise-api-v1.yaml →</a>
         </div>
         <div class="card">
           <h2>Solicitar trial keys</h2>
