--- a/swagger/index.html
+++ b/swagger/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@5/swagger-ui-standalone-preset.js"></script>
     <script>
       window.ui = SwaggerUIBundle({
-        url: "../openapi.yaml",
+        url: "../enterprise-api-v1.yaml",
         dom_id: "#swagger-ui",
         presets: [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset],
         layout: "StandaloneLayout",
