cambio nombre de yaml

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="card">
           <h2>OpenAPI spec</h2>
           <p>Descargá la especificación pública en YAML.</p>
-          <a href="/entreprise-api-v1.yaml">Ver entreprise-api-v1.yaml →</a>
+          <a href="/enterprise-api-v1.yaml">Ver enterprise-api-v1.yaml →</a>
         </div>
         <div class="card">
           <h2>Solicitar trial keys</h2>
