Agrego icono, modifico yaml

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Caliape Enterprise API</title>
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <style>
       :root {
         color-scheme: light;
@@ -106,22 +107,18 @@
         <div class="card">
           <h2>Solicitar trial keys</h2>
           <p>Pedí credenciales para probar la API en tu entorno.</p>
-          <a href="mailto:enterprise@caliape.com">Contactar →</a>
+          <a href="mailto:info@caliape.com">Contactar →</a>
         </div>
       </section>
 
       <div class="notice">
         <strong>Importante:</strong>
         <p>Para probar endpoints necesitás trial keys (<code>x-enterprise-key</code> y <code>x-enterprise-jwt</code>). Sin headers, las requests responden 401/403.</p>
-<<<<<<< codex/implement-documentation-for-enterprise-api-i5b2kx
         <a class="cta" href="/docs/">Ir a Swagger UI</a>
-=======
-        <a class="cta" href="/swagger/">Ir a Swagger UI</a>
->>>>>>> main
       </div>
 
       <footer>
-        <p>¿Dudas? Escribinos a <a href="mailto:enterprise@caliape.com">enterprise@caliape.com</a>.</p>
+        <p>¿Dudas? Escribinos a <a href="mailto:info@caliape.com">info@caliape.com</a>.</p>
       </footer>
     </main>
   </body>
